# agentic-rag

./: .env  .gitignore  README.md  agent_memory.json  badge_test.md  models.json  pyproject.toml
data/: project_orion.txt  project_orion_qa.json  test_ingest.txt  vision_eval_results.json
data/chroma_eval/: chroma.sqlite3
data/chroma_eval_v2/: chroma.sqlite3
data/chroma_v2_test/: doc_store.json
data/demo_chroma/: chroma.sqlite3
data/test_chroma/: chroma.sqlite3  doc_store.json
doc/: architecture.mdx  docs.json  evaluation.mdx  index.mdx  introduction.mdx  omni-corpus.mdx  retrieval.mdx  self-correction.mdx
docs/: dify_comparison.md  rag_techniques.md
scripts/: benchmark_llm.py  check_env.py  check_gpu.py  check_llama_gpu.py  demo.py  demo_v2.py  evaluate.py  evaluate_ingestion.py  evaluate_v2.py  evaluate_vision.py  generate_ablation_graph.py  generate_dataset.py  generate_graph.py  list_models.py  smoke_test_embedding.py  test_gemini.py  test_key.py  test_v2_ingestion.py
src/agentic_rag/: __init__.py  agent.py  dataset_generator.py  embedding.py  ingestor.py  llm.py  retriever.py  router.py  tools.py  vector_store.py
tests/: test_agent_loop.py  test_vector_store.py
